# naive_vcs

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  reset.rs  rm.rs  show.rs  status.rs
src/core/: blob.rs  branch.rs  commit.rs  index.rs  merge.rs  mod.rs  object.rs  repository.rs  tree.rs
src/utils/: diff.rs  files.rs  hash.rs  mod.rs
