[package]
name = "naive_vcs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A naive but full-featured version control system"
license = "Apache-2.0"

[[bin]]
name = "nvcs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
ignore = "0.4"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
similar = "2.3"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"